images for readme added

--- a/README.me
+++ b/README.me
@@ -6,3 +6,4 @@ Password: 12345678.
 If you have your own token you can register and add it to the account, after logging in with your
 account you have a drop down button in the top right corner where you can add your own token.
 
+![Options](gpt-webapp.web/src/main/resources/static/images/opera_iqYtDRrP7r.png)
