--- a/README.me
+++ b/README.me
@@ -7,3 +7,19 @@ If you have your own token you can register and add it to the account, after log
 account you have a drop down button in the top right corner where you can add your own token.
 
 ![Options](gpt-webapp.web/src/main/resources/static/images/opera_iqYtDRrP7r.png)
+
+
+To create the first chat window click on the "Agregar chat" button and then click on the new chat in the list.
+
+![Create Chat](gpt-webapp.web/src/main/resources/static/images/opera_78k0ycDbTy.png)
+
+
+In the list each chat has the option to modify the name or to be removed from the list forever.
+
+![First Chat](gpt-webapp.web/src/main/resources/static/images/opera_pc2lNruhqv.png)
+
+
+Each chat window is dynamic and can be manipulated as you like, it can be moved around the tabs and works
+even with a variety of chats open. Each chat window has its own model and can be selected.
+
+![Chat](gpt-webapp.web/src/main/resources/static/images/opera_JTSmvvuZeU.png)
