--- a/README.me
+++ b/README.me
@@ -6,20 +6,20 @@ Password: 12345678.
 If you have your own token you can register and add it to the account, after logging in with your
 account you have a drop down button in the top right corner where you can add your own token.
 
-![Options](gpt-webapp.web/src/main/resources/static/images/opera_iqYtDRrP7r.png)
+![opera_iqYtDRrP7r](https://github.com/user-attachments/assets/a757852c-778c-4e31-8f99-98ffd7032217)
 
 
 To create the first chat window click on the "Agregar chat" button and then click on the new chat in the list.
 
-![Create Chat](gpt-webapp.web/src/main/resources/static/images/opera_78k0ycDbTy.png)
+![opera_78k0ycDbTy](https://github.com/user-attachments/assets/fd944340-bde0-4cc2-8f36-6f00f144b37c)
 
 
 In the list each chat has the option to modify the name or to be removed from the list forever.
 
-![First Chat](gpt-webapp.web/src/main/resources/static/images/opera_pc2lNruhqv.png)
+![opera_pc2lNruhqv](https://github.com/user-attachments/assets/2e1961f4-b9bf-463b-ac66-27e201185ea2)
 
 
 Each chat window is dynamic and can be manipulated as you like, it can be moved around the tabs and works
 even with a variety of chats open. Each chat window has its own model and can be selected.
 
-![Chat](gpt-webapp.web/src/main/resources/static/images/opera_JTSmvvuZeU.png)
+![opera_JTSmvvuZeU](https://github.com/user-attachments/assets/36f85521-347f-4564-9477-83891ae5b1d1)
